--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -1,58 +1,86 @@
-.app__specialmenu {
-  display: flex;
+.app__specialMenu {
   flex-direction: column;
-  color: white;
+  background: var(--color-black);
 }
 
-.app__specialmenu-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.app__specialmenu-header p {
-  color: var(--color-white);
-  font-size: 23px;
-  font-weight: 700;
-  line-height: 130%;
-  letter-spacing: 0.92px;
-  text-transform: capitalize;
-}
-
-.app__specialmenu-header h1 {
+.app__specialMenu-title {
+  margin-bottom: 2rem;
   text-align: center;
-  font-size: 64px;
-  font-weight: 600;
-  line-height: 130%;
-  letter-spacing: 2.56px;
-  text-transform: capitalize;
 }
 
-.app__specialmenu-content {
+.app__specialMenu-menu {
+  width: 100%;
+  margin: 2rem 0;
+
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  flex-direction: row;
 }
 
-.app__specialmenu-content img {
-  width: 444px;
-  height: 659px;
-  margin: 4rem 2rem;
-}
-
-.app__specialmenu-content_winebeer,
-.app__specialmenu-content_cocktails {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  margin: 4rem 2rem;
-}
-
-.app__specialmenu-content_winebeer h1,
-.app__specialmenu-content_cocktails h1 {
+.app__specialMenu-menu_heading {
+  font-family: var(--font-base);
+  font-weight: 600;
   font-size: 45px;
+  line-height: 58.5px;
+  letter-spacing: 0.04em;
+  color: var(--color-white);
+}
+
+.app__specialMenu-menu_wine,
+.app__specialMenu-menu_cocktails {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
+}
+
+.app__specialMenu-menu_img {
+  width: 410px;
+  margin: 0 2rem;
+}
+
+.app__specialMenu-menu_img img {
+  width: 100%;
+  height: auto;
+}
+
+.app__specialMenu_menu_items {
+  display: flex;
+  flex-direction: column;
+
+  margin: 2rem 0;
+  width: 100%;
+}
+
+@media screen and (min-width: 2000px) {
+  .app__specialMenu-menu_img {
+    width: 650px;
+  }
+
+  .app__specialMenu-menu_img img {
+    height: 920px;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .app__specialMenu-menu {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .app__specialMenu-menu_img {
+    margin: 3rem 0;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app__specialMenu-menu_img {
+    width: 100%;
+  }
+
+  .app__specialMenu-menu_heading {
+    font-size: 35px;
+    line-height: 48.5px;
+  }
 }
